# Agentic_Ai_Course

./: .gitignore  README.md  pyproject.toml  todos.json
10)n8n/: Course Outline.txt  Overview.txt
2) Test/: main.py  pyproject.toml
2)FastApi/: alembic.ini  file_handling.py  middleware.py  mongodb.py  neondb.py  post_routes.py  pyproject.toml
2)FastApi/alembic/: env.py
2)FastApi/alembic/versions/: 069f8a5c45cc_create_user_table_and_create_foreign_.py  25898fa03de9_add_new_coloumn_status_todo.py  70e73eedb22a_create_todos_table.py  e078cb5f67f1_update_status.py  f23f946bf90f_create_todos_and_user_tables_again.py  fd5da3672f43_make_user_id_nullable_to_false.py
2)FastApi/config/: database.py
2)FastApi/models/: todo_model.py
2)FastApi/routes/: todo_routes.py  user_routes.py
2)FastApi/utils/: helper_function.py
2)FastApi/validations/: validation.py
2)Test/: main.py  pyproject.toml
3)Data_Processing/: numpydata.py  opencvdata.py  opencvproject.py  pandas_project.py  pandasdata.py
4)Model Development/: cat_dog_model.py  predict_cat_dog.model.py  script.py
6)openai-agent-sdk/: agent_tool_bill_calculator.py  agent_tool_github.py  agent_tools_example_todos_json_app.py  basic_agent.py  context_via_instructions.py  context_via_web_search.py  customer_service.py  function_tools_agent.py  hosted_tools_agent.py  multiagents.py  routing.py  streaming.py  structured_output.py  todos.json
7)Langrapgh/: langgraph_agent.py  langgraph_basic_agent.py
8)LangChain/: langchain_messages.py  langchain_prompts.py  memory.py
9)Rag-in-LangChain/: gemeni_rag.py
(+3 files in other folders)
